deployment/backend.yaml
# backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: instaff-backend
  labels:
    app: instaff-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: instaff-backend
  template:
    metadata:
      labels:
        app: instaff-backend
    spec:
      containers:
        - name: instaff-backend
          image: ghcr.io/2426-itp-ahitm/instaff-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
