deployment/keycloak-new.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak-new
  labels:
    app: keycloak-new
spec:
  replicas: 2
  selector:
    matchLabels:
      app: keycloak-new
  template:
    metadata:
      labels:
        app: keycloak-new
    spec:
      containers:
      - name: keycloak-new
        image: quay.io/keycloak/keycloak:21.1.1
        args: ["start", "--cache-stack=kubernetes", "--hostname=https://domain-name.com/keycloak/auth/","--spi-login-protocol-openid-connect-legacy-logout-redirect-uri=true"]
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        - name: jgroups
          containerPort: 7600
