deployment/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: ghcr.io/pfarrhoferphilip/instaff-keycloak:latest
          imagePullPolicy: Always
          #command: ["sleep", "3600"]
          ports:
            - containerPort: 8080
