deployment/keycloak-service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-new
  labels:
    app: keycloak-new
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  - name: https
    port: 8443
    targetPort: 8443
  - name: jgroup
    port: 7600
    targetPort: 7600

  selector:
    app: keycloak-new
  type: ClusterIP
  clusterIP: None
