deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leocloud-nginx-demo-root
spec:
  ingressClassName: nginx
  rules:
  - host: it210157.cloud.htl-leonding.ac.at
    http:
      paths:
      - path: /auth
        pathType: ImplementationSpecific
        backend:
          service:
            name: keycloak
            port:
              number: 8080
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8081
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
